apply plugin: 'base'

subprojects {

    apply plugin: 'java'
    apply plugin: 'checkstyle'
    apply plugin: 'eclipse'
    apply plugin: 'maven-publish'

    java.toolchain.languageVersion = JavaLanguageVersion.of(17)

    repositories {
        mavenLocal()
        mavenCentral()
    }

    dependencies {
        implementation 'org.jetbrains:annotations:24.0.0'

        testImplementation(platform("org.junit:junit-bom:5.9.2"))
        testImplementation("org.junit.jupiter:junit-jupiter:5.9.2")
    }

    tasks.test {
        useJUnitPlatform()
    }

}